/***********************************************************************
X3 ChangeLog

2008-07-20  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: remove spin debugging code. Fix gline/kill glitch.

	* src/config.h: bump trunk to 1.7

2008-07-19  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: dont print warning on uping to a jupe. added
	irc_svsquit() function

	* src/chanserv.c: rework wheel-of-misfortune a bit, allow individual
	spins to be enabled in x3.conf and make it easy to add new ones or
	change likelyhoods.

	* src/proto.h: added irc_svsquit() prototype

	* src/x3.conf.example: wheel action example configs

2008-07-18  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: set lastmod time to current time when sending
	glines, otherwise ircd wont burst them later.

	* src/modcmd.c: break credits out to its own command, and add svn
	version string to ctcp version reply.

2008-07-02  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Added missing PRIV_*'s to privtab

	* src/hash.h: #define's for missing PRIV_*'s

2008-06-23  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: Fix a bug where if spin abuse creates a clone, but an oper kills the
	clone before its auto-removed, x3 crashes. Thanks tyler and jigsy.

2008-06-23  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: make opserv access level required to be in oper ldap
	group configurable.

	* src/nickserv.h: make opserv access level required to be in oper ldap
	group configurable.

2008-06-12  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fix login-on-connect logic problem when ldap libs
	 are present but ldap is not in use.

2008-04-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed a small bug with SVSNickChange.

	* src/hash.h: Added buttaknife's patch which allows modes to be
	searched for using opserv trace. Also Fixed a small bug with
	SVSNickChange.

	* src/hash.c: Fixed a small bug with SVSNickChange.
